k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: store-backend
          image: matnow138/backend:1.0.4
          ports:
            - containerPort: 8080
          command: ["bash","-c"]
          args: ["./gradlew build ; java -jar build/libs/products-api-0.0.1-SNAPSHOT.jar"]
