k8s/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: products-api
  labels:
    component: backend
spec:
  containers:
    - name: store-backend
      image: matnow138/backend:1.0.4
      command: ["bash","-c"]
      args: ["./gradlew build  ; java -jar build/libs/products-api-0.0.1-SNAPSHOT.jar"]
      ports:
        - containerPort: 8080
