k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: store-database
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
        - name: store-database
          image: mysql
          ports:
            - containerPort: 3306
