k8s/database-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: store-database
  labels:
    component: database
spec:
  containers:
    - name: store-database
      image: mysql:8.0
      args: ["--default-authentication-plugin=mysql_native_password"]
      ports:
        - containerPort: 3306
