k8s/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    component: frontend
spec:
  containers:
    - name: store-frontend
      image: matnow138/store-frontend:1.0.3
      ports:
        - containerPort: 3000
