k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: notification
  template:
    metadata:
      labels:
        component: notification
    spec:
      containers:
        - name: notification-api
          image: matnow138/notification:1.0.0
          ports:
            - containerPort: 5001
      affinity:
        podAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
          - labelSelector:
              matchExpressions:
              - key: component 
                operator: In 
                values:
                - queue 
            topologyKey: "kubernetes.io/hostname"
