k8s/notification-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: notification-api
  labels:
    component: notification
spec:
  containers:
    - name: notification-api
      image: matnow138/notification:1.0.0
      ports:
        - containerPort: 5001
