k8s/rabbitmq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq
  labels:
    component: queue
spec:
  containers:
    - name: rabbitmq
      image: rabbitmq
      ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15672
          name: http
