k8s/database-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-cluster-ip-service
spec:
  ports:
    - name: database
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    component: database
