k8s/notification-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    component: queue
